# twitterbot-rs

./: .env_example  .gitignore  Cargo.toml  filter_rules.json
src/: main.rs
src/bot/: bot.rs  init.rs  mod.rs
src/models/: bot_config.rs  bot_tweet.rs  filter_query.rs  filter_rule.rs  follow_strategy.rs  follower_range.rs  mod.rs  retweeted.rs  twitter_verify.rs
src/storage/: mod.rs  storage.rs
